--- a/arch/arm64/configs/elementalx_defconfig
+++ b/arch/arm64/configs/elementalx_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.14.191 Kernel Configuration
+# Linux/arm64 4.14.204 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -48,7 +48,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-ElementalX-P4-2.11"
+CONFIG_LOCALVERSION="-ElementalX-P4-3.00"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZ4=y
@@ -156,9 +156,8 @@ CONFIG_BLK_CGROUP=y
 # CONFIG_DEBUG_BLK_CGROUP is not set
 CONFIG_CGROUP_WRITEBACK=y
 CONFIG_CGROUP_SCHED=y
-CONFIG_FAIR_GROUP_SCHED=y
-# CONFIG_CFS_BANDWIDTH is not set
-CONFIG_RT_GROUP_SCHED=y
+# CONFIG_FAIR_GROUP_SCHED is not set
+# CONFIG_RT_GROUP_SCHED is not set
 # CONFIG_CGROUP_PIDS is not set
 # CONFIG_CGROUP_RDMA is not set
 CONFIG_CGROUP_FREEZER=y
@@ -463,6 +462,7 @@ CONFIG_ARCH_SM8150=y
 # CONFIG_ARCH_XGENE is not set
 # CONFIG_ARCH_ZX is not set
 # CONFIG_ARCH_ZYNQMP is not set
+# CONFIG_BOARD_SUNFISH is not set
 CONFIG_BOARD_FLORAL=y
 
 #
@@ -890,7 +890,6 @@ CONFIG_IPV6_SUBTREES=y
 # CONFIG_IPV6_SEG6_LWTUNNEL is not set
 # CONFIG_IPV6_SEG6_HMAC is not set
 CONFIG_NETLABEL=y
-CONFIG_ANDROID_PARANOID_NETWORK=y
 CONFIG_NETWORK_SECMARK=y
 # CONFIG_NET_PTP_CLASSIFY is not set
 # CONFIG_NETWORK_PHY_TIMESTAMPING is not set
@@ -1323,8 +1322,8 @@ CONFIG_RFKILL_LEDS=y
 # CONFIG_CEPH_LIB is not set
 # CONFIG_NFC is not set
 # CONFIG_NFC_NQ is not set
-CONFIG_NFC_ST21NFC=y
 # CONFIG_NTAG_NQ is not set
+CONFIG_NFC_ST21NFC=y
 CONFIG_ESE_ST54J=y
 # CONFIG_PSAMPLE is not set
 # CONFIG_NET_IFE is not set
@@ -1387,6 +1386,7 @@ CONFIG_CMA_SIZE_SEL_MBYTES=y
 # CONFIG_CMA_SIZE_SEL_MAX is not set
 CONFIG_CMA_ALIGNMENT=8
 CONFIG_GENERIC_ARCH_TOPOLOGY=y
+# CONFIG_POWER_DEBUG is not set
 
 #
 # Bus devices
@@ -2164,6 +2164,7 @@ CONFIG_JOYSTICK_XPAD_LEDS=y
 # CONFIG_JOYSTICK_PSXPAD_SPI is not set
 # CONFIG_INPUT_TABLET is not set
 CONFIG_INPUT_TOUCHSCREEN=y
+# CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_v27 is not set
 CONFIG_TOUCHSCREEN_SEC_TS=y
 # CONFIG_TOUCHSCREEN_SEC_TS_GLOVEMODE is not set
 CONFIG_TOUCHSCREEN_PROPERTIES=y
@@ -2265,8 +2266,10 @@ CONFIG_INPUT_UINPUT=y
 # CONFIG_INPUT_CMA3000 is not set
 # CONFIG_INPUT_SOC_BUTTON_ARRAY is not set
 # CONFIG_INPUT_DRV260X_HAPTICS is not set
+# CONFIG_INPUT_DRV2624_HAPTICS is not set
 # CONFIG_INPUT_DRV2665_HAPTICS is not set
 # CONFIG_INPUT_DRV2667_HAPTICS is not set
+# CONFIG_FPC_FINGERPRINT is not set
 
 #
 # Led laser support
@@ -2506,6 +2509,7 @@ CONFIG_SPI_SPIDEV=y
 # CONFIG_SPI_LOOPBACK_TEST is not set
 # CONFIG_SPI_TLE62X0 is not set
 # CONFIG_SPI_SLAVE is not set
+# CONFIG_SPI_DYNAMIC is not set
 CONFIG_SPMI=y
 CONFIG_SPMI_MSM_PMIC_ARB=y
 # CONFIG_SPMI_MSM_PMIC_ARB_DEBUG is not set
@@ -3093,6 +3097,7 @@ CONFIG_REGULATOR_REFGEN=y
 CONFIG_REGULATOR_RPMH=y
 # CONFIG_REGULATOR_SPM is not set
 CONFIG_REGULATOR_STUB=y
+# CONFIG_REGULATOR_SLG51000 is not set
 CONFIG_REGULATOR_MAX77826=y
 CONFIG_REGULATOR_TPS=y
 # CONFIG_RC_CORE is not set
@@ -3524,6 +3529,9 @@ CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_CS35L33 is not set
 # CONFIG_SND_SOC_CS35L34 is not set
 # CONFIG_SND_SOC_CS35L35 is not set
+# CONFIG_SND_SOC_CS35L41 is not set
+# CONFIG_SND_SOC_CS35L41_SPI is not set
+# CONFIG_SND_SOC_CS35L41_I2C is not set
 # CONFIG_SND_SOC_CS42L42 is not set
 # CONFIG_SND_SOC_CS42L51_I2C is not set
 # CONFIG_SND_SOC_CS42L52 is not set
@@ -3557,6 +3565,8 @@ CONFIG_SND_SOC_HDMI_CODEC=y
 # CONFIG_SND_SOC_PCM3168A_SPI is not set
 # CONFIG_SND_SOC_PCM512x_I2C is not set
 # CONFIG_SND_SOC_PCM512x_SPI is not set
+# CONFIG_SND_SOC_RT5514 is not set
+# CONFIG_SND_SOC_RT5514_SPI is not set
 # CONFIG_SND_SOC_RT5616 is not set
 # CONFIG_SND_SOC_RT5631 is not set
 # CONFIG_SND_SOC_RT5677_SPI is not set
@@ -3605,6 +3615,7 @@ CONFIG_SND_SOC_HDMI_CODEC=y
 # CONFIG_SND_SOC_NAU8810 is not set
 # CONFIG_SND_SOC_NAU8824 is not set
 # CONFIG_SND_SOC_TPA6130A2 is not set
+# CONFIG_SND_SOC_CODEC_DETECT is not set
 CONFIG_SND_SOC_IAXXX=y
 CONFIG_IAXXX_PORT_CLOCK_FORWARD=y
 # CONFIG_IAXXX_TO_MAX_PLUGIN_IP_EP is not set
@@ -3743,6 +3754,7 @@ CONFIG_USB_DEFAULT_PERSIST=y
 #
 # CONFIG_USB_C67X00_HCD is not set
 CONFIG_USB_XHCI_HCD=y
+# CONFIG_USB_XHCI_REPLACE_POLICY is not set
 CONFIG_USB_XHCI_PCI=y
 CONFIG_USB_XHCI_PLATFORM=y
 # CONFIG_USB_EHCI_HCD is not set
@@ -4377,6 +4389,7 @@ CONFIG_IPA3=y
 CONFIG_IPA_WDI_UNIFIED_API=y
 # CONFIG_IPA_ETH is not set
 CONFIG_RMNET_IPA3=y
+# CONFIG_RMNET_IPA3_TX_TIMEOUT_DETECT is not set
 # CONFIG_ECM_IPA is not set
 CONFIG_RNDIS_IPA=y
 CONFIG_IPA3_MHI_PROXY=y
@@ -4673,7 +4686,7 @@ CONFIG_MSM_SUSPEND_STATS_FIRST_BUCKET=1000000000
 # CONFIG_MSM_AGL is not set
 # CONFIG_RMNET_CTL is not set
 # CONFIG_QCOM_HGSL_TCSR_SIGNAL is not set
-CONFIG_MSM_PERFORMANCE=y
+# CONFIG_MSM_PERFORMANCE is not set
 CONFIG_QMP_DEBUGFS_CLIENT=y
 CONFIG_QCOM_QHEE_ENABLE_MEM_PROTECTION=y
 CONFIG_QCOM_SMP2P_SLEEPSTATE=y
@@ -5381,7 +5394,6 @@ CONFIG_MESSAGE_LOGLEVEL_DEFAULT=4
 # CONFIG_BOOT_PRINTK_DELAY is not set
 CONFIG_DYNAMIC_DEBUG=y
 # CONFIG_DEBUG_MODULE_LOAD_INFO is not set
-# CONFIG_DEBUG_CONSOLE_UNHASHED_POINTERS is not set
 
 #
 # Compile-time checks and compiler options
@@ -5573,6 +5585,7 @@ CONFIG_LKDTM=y
 # CONFIG_TEST_STATIC_KEYS is not set
 # CONFIG_TEST_KMOD is not set
 # CONFIG_TEST_MEMINIT is not set
+# CONFIG_TEST_STACKINIT is not set
 CONFIG_BUG_ON_DATA_CORRUPTION=y
 CONFIG_CC_WERROR=y
 # CONFIG_PANIC_ON_DATA_CORRUPTION is not set
@@ -5587,7 +5600,13 @@ CONFIG_KDB_DEFAULT_ENABLE=0x1
 CONFIG_KDB_CONTINUE_CATASTROPHIC=0
 CONFIG_ARCH_HAS_UBSAN_SANITIZE_ALL=y
 # CONFIG_ARCH_WANTS_UBSAN_NO_NULL is not set
-# CONFIG_UBSAN is not set
+CONFIG_UBSAN=y
+CONFIG_UBSAN_TRAP=y
+CONFIG_UBSAN_BOUNDS=y
+# CONFIG_UBSAN_MISC is not set
+CONFIG_UBSAN_SANITIZE_ALL=y
+# CONFIG_UBSAN_ALIGNMENT is not set
+# CONFIG_UBSAN_NULL is not set
 CONFIG_ARCH_HAS_DEVMEM_IS_ALLOWED=y
 # CONFIG_ARM64_PTDUMP_CORE is not set
 # CONFIG_ARM64_PTDUMP_DEBUGFS is not set
@@ -5597,7 +5616,24 @@ CONFIG_PID_IN_CONTEXTIDR=y
 # CONFIG_DEBUG_ALIGN_RODATA is not set
 # CONFIG_ARM64_RELOC_TEST is not set
 CONFIG_ARM64_STRICT_BREAK_BEFORE_MAKE=y
-# CONFIG_CORESIGHT is not set
+CONFIG_CORESIGHT=y
+CONFIG_CORESIGHT_LINKS_AND_SINKS=y
+CONFIG_CORESIGHT_LINK_AND_SINK_TMC=y
+# CONFIG_CORESIGHT_CATU is not set
+# CONFIG_CORESIGHT_SINK_TPIU is not set
+# CONFIG_CORESIGHT_SINK_ETBV10 is not set
+CONFIG_CORESIGHT_SOURCE_ETM4X=y
+CONFIG_CORESIGHT_DYNAMIC_REPLICATOR=y
+# CONFIG_CORESIGHT_DBGUI is not set
+# CONFIG_CORESIGHT_STM is not set
+# CONFIG_CORESIGHT_CPU_DEBUG is not set
+# CONFIG_CORESIGHT_CTI is not set
+# CONFIG_CORESIGHT_TPDA is not set
+# CONFIG_CORESIGHT_TPDM is not set
+# CONFIG_CORESIGHT_DUMMY is not set
+# CONFIG_CORESIGHT_REMOTE_ETM is not set
+CONFIG_CORESIGHT_CSR=y
+# CONFIG_CORESIGHT_TGU is not set
 
 #
 # Security options
@@ -5710,7 +5746,7 @@ CONFIG_CRYPTO_SIMD=y
 #
 # CONFIG_CRYPTO_CCM is not set
 CONFIG_CRYPTO_GCM=y
-# CONFIG_CRYPTO_CHACHA20POLY1305 is not set
+CONFIG_CRYPTO_CHACHA20POLY1305=y
 CONFIG_CRYPTO_SEQIV=y
 CONFIG_CRYPTO_ECHAINIV=y
 
@@ -5742,7 +5778,7 @@ CONFIG_CRYPTO_CRC32C=y
 CONFIG_CRYPTO_CRC32=y
 # CONFIG_CRYPTO_CRCT10DIF is not set
 CONFIG_CRYPTO_GHASH=y
-# CONFIG_CRYPTO_POLY1305 is not set
+CONFIG_CRYPTO_POLY1305=y
 CONFIG_CRYPTO_MD4=y
 CONFIG_CRYPTO_MD5=y
 # CONFIG_CRYPTO_MICHAEL_MIC is not set
@@ -5772,7 +5808,7 @@ CONFIG_CRYPTO_DES=y
 # CONFIG_CRYPTO_FCRYPT is not set
 # CONFIG_CRYPTO_KHAZAD is not set
 # CONFIG_CRYPTO_SALSA20 is not set
-# CONFIG_CRYPTO_CHACHA20 is not set
+CONFIG_CRYPTO_CHACHA20=y
 # CONFIG_CRYPTO_SEED is not set
 # CONFIG_CRYPTO_SERPENT is not set
 # CONFIG_CRYPTO_TEA is not set
@@ -5787,7 +5823,7 @@ CONFIG_CRYPTO_LZO=y
 # CONFIG_CRYPTO_842 is not set
 CONFIG_CRYPTO_LZ4=y
 # CONFIG_CRYPTO_LZ4HC is not set
-# CONFIG_CRYPTO_ZSTD is not set
+CONFIG_CRYPTO_ZSTD=y
 
 #
 # Random Number Generation
@@ -5870,6 +5906,7 @@ CONFIG_CRC32_SLICEBY8=y
 # CONFIG_CRC7 is not set
 CONFIG_LIBCRC32C=y
 CONFIG_CRC8=y
+CONFIG_XXHASH=y
 CONFIG_AUDIT_GENERIC=y
 CONFIG_AUDIT_ARCH_COMPAT_GENERIC=y
 CONFIG_AUDIT_COMPAT_GENERIC=y
@@ -5880,6 +5917,8 @@ CONFIG_LZO_COMPRESS=y
 CONFIG_LZO_DECOMPRESS=y
 CONFIG_LZ4_COMPRESS=y
 CONFIG_LZ4_DECOMPRESS=y
+CONFIG_ZSTD_COMPRESS=y
+CONFIG_ZSTD_DECOMPRESS=y
 CONFIG_XZ_DEC=y
 CONFIG_XZ_DEC_X86=y
 CONFIG_XZ_DEC_POWERPC=y
