--- a/arch/arm64/configs/elementalx_defconfig
+++ b/arch/arm64/configs/elementalx_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.19.110 Kernel Configuration
+# Linux/arm64 4.19.135 Kernel Configuration
 #
 
 #
@@ -20,7 +20,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-ElementalX-P5-1.04"
+CONFIG_LOCALVERSION="-ElementalX-P5-1.05"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_BUILD_SALT=""
 CONFIG_HAVE_KERNEL_GZIP=y
@@ -369,6 +369,7 @@ CONFIG_ARM64_ERRATUM_1024718=y
 CONFIG_ARM64_ERRATUM_1188873=y
 CONFIG_ARM64_ERRATUM_1463225=y
 # CONFIG_ARM64_ERRATUM_1542418 is not set
+CONFIG_ARM64_ERRATUM_1542419=y
 # CONFIG_CAVIUM_ERRATUM_22375 is not set
 # CONFIG_CAVIUM_ERRATUM_23154 is not set
 # CONFIG_CAVIUM_ERRATUM_27456 is not set
@@ -770,6 +771,11 @@ CONFIG_ARCH_HAS_SYSCALL_WRAPPER=y
 # CONFIG_GKI_HIDDEN_VIRTUAL_CONFIGS is not set
 # CONFIG_GKI_LEGACY_WEXT_ALLCONFIG is not set
 # CONFIG_GKI_HIDDEN_SOC_PM_CONFIGS is not set
+# CONFIG_GKI_HIDDEN_VIDEOBUF2_CONFIGS is not set
+# CONFIG_GKI_HIDDEN_USB_CONFIGS is not set
+# CONFIG_GKI_HIDDEN_SOC_BUS_CONFIGS is not set
+# CONFIG_GKI_HIDDEN_GPU_CONFIGS is not set
+# CONFIG_GKI_HIDDEN_IRQ_CONFIGS is not set
 # CONFIG_GKI_HACKS_TO_FIX is not set
 CONFIG_FREEZER=y
 
